add focus style variable #1506

--- a/customize.dist/src/less2/include/checkmark.less
+++ b/customize.dist/src/less2/include/checkmark.less
@@ -130,7 +130,7 @@
             }
             outline: none;
             &:focus {
-                outline: @cryptpad_color_brand solid 2px;
+                outline: @variables_focus_style;
             }
         }
 
@@ -218,7 +218,7 @@
             }
             outline: none;
             &:focus {
-                outline: @cryptpad_color_brand solid 2px;
+                outline: @variables_focus_style;
             }
         }
 
