--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -32,7 +32,7 @@
     }
     .btn-primary{
         &:focus {
-            outline: @cryptpad_color_brand solid 2px;
+            outline: @variables_focus_style;
         }
     }
 
@@ -353,7 +353,7 @@
                         text-overflow: ellipsis;
                     }
                     &:focus {
-                        outline: @cryptpad_color_brand solid 2px;
+                        outline: @variables_focus_style;
                     }
                 }
             }
@@ -381,7 +381,7 @@
                     .leftside-menu-category_main();
                     margin: 0;
                     &:focus {
-                        outline: @cryptpad_color_brand solid 2px;
+                        outline: @variables_focus_style;
                     }
                 }
             }
@@ -410,7 +410,7 @@
                 top: -1px;
             }
             &:focus {
-                outline: @cryptpad_color_brand solid 2px;
+                outline: @variables_focus_style;
             }
         }
         .cp-app-drive-tree-docs {
