--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -29,7 +29,7 @@
         &.tui-full-calendar-content {
             font-size: @colortheme_app-font-size;
             &:focus {
-                outline: @cryptpad_color_brand solid 2px;
+                outline: @variables_focus_style;
             }
         }
         &[readonly] {
@@ -142,7 +142,7 @@
             }
             outline: none;
             &:focus {
-                outline: @cryptpad_color_brand solid 2px;
+                outline: @variables_focus_style;
             }
         }
     }
@@ -261,7 +261,7 @@
 
         outline: none;
         &:focus {
-            outline: @cryptpad_color_brand solid 2px;
+            outline: @variables_focus_style;
         }
         &::-moz-focus-inner {
             border: 0;
