--- a/customize.dist/src/less2/include/tokenfield.less
+++ b/customize.dist/src/less2/include/tokenfield.less
@@ -82,7 +82,7 @@
                 vertical-align: middle;
                 outline: none;
                 &:focus {
-                    outline: @cryptpad_color_brand solid 2px;
+                    outline: @variables_focus_style;
                 }
             }
             .close {
