--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -634,7 +634,7 @@
                             border: 0px;
                         }
                         &:focus {
-                            outline: @cryptpad_color_brand solid 2px;
+                            outline: @variables_focus_style;
                         }
                         i {
                             margin-left: 5px;
