--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -47,6 +47,9 @@
                     align-items: center;
                     .leftside-menu-category_main();
                     box-shadow: @cryptpad_ui_shadow;
+                    &:focus{
+                        outline: @variables_focus_style;
+                    }
                 }
             }
             &.cp-leftside-narrow {
