add focus style to teams cards #1506

--- a/www/teams/app-team.less
+++ b/www/teams/app-team.less
@@ -142,6 +142,9 @@
                 height: 384px;
                 padding: 50px;
                 margin: 5px;
+                &:focus{
+                    outline: @variables_focus_style;
+                }
                 &.create, &:not(.empty) {
                     cursor: pointer;
                     &:hover {
