--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -40,6 +40,11 @@
 
     #cp-sidebarlayout-container {
         #cp-sidebarlayout-rightside {
+            input, button, span[tabindex="0"] {
+                &:focus{
+                    outline: @variables_focus_style;
+                }
+            }
             input[type="checkbox"] {
                 vertical-align: middle;
                 margin-right: 5px;
@@ -111,6 +116,9 @@
                 button {
                     margin-top:0;
                     margin-left: 10px;
+                }
+                .cp-password-reveal {
+                    border-radius:@variables_radius;
                 }
             }
             @media (max-width: 840px) {
