Make popup appear at current scroll position #1583

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -156,7 +156,8 @@
         .tui-full-calendar-popup {
             border-radius: @variables_radius_L;
             @media screen and (max-width : @browser_media-medium-screen){
-                bottom: 50%;
+                position: fixed;
+                top: 5rem;
             }
         }
         .tui-full-calendar-popup-container {
