Adjust height of container to not overlap #1369

--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -34,6 +34,8 @@
             flex-flow: column;
             .cp-toolbar-history-actions {
                 width: 100%;
+                height: auto;
+                margin: 0.6rem 0;
                 .cp-history-actions-first {
                     margin-right: 0 !important;
                 }
