add border radius to focused icons on drive sidebar

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -411,6 +411,7 @@
             }
             &:focus {
                 outline: @variables_focus_style;
+                border-radius: @variables_radius_S;
             }
         }
         .cp-app-drive-tree-docs {
