Add review changes #1369

--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -34,10 +34,13 @@
             flex-flow: column;
             .cp-toolbar-history-actions {
                 width: 100%;
-                height: auto;
                 margin: 0.6rem 0;
+                height: auto !important;
                 .cp-history-actions-first {
                     margin-right: 0 !important;
+                }
+                button {
+                    margin: 0.1rem !important;
                 }
             }
             .cp-toolbar-history-timeline {
