fix focus style on the home page

--- a/customize.dist/src/less2/include/infopages.less
+++ b/customize.dist/src/less2/include/infopages.less
@@ -47,7 +47,7 @@ body.html {
     a:hover {
         opacity: 1;
     }
-    a:focus {
+    a:focus-visible {
         outline: @variables_focus_style;
         border-radius: @variables_radius;
     }
