--- a/customize.dist/src/less2/include/infopages.less
+++ b/customize.dist/src/less2/include/infopages.less
@@ -301,7 +301,7 @@ body.html {
             &:hover {
                 color: @cryptpad_text_col;
             }
-            &:focus {
+            &:focus-visible {
                 outline: @variables_focus_style;
             }
             i {
