change focus to focus-visible

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -200,7 +200,7 @@
                 }
                 .cp-usergrid-user, textarea, a, .fa-times {
                     outline: none;
-                    &:focus {
+                    &:focus-visible {
                         outline: @variables_focus_style;
                     }
                 }
@@ -244,7 +244,7 @@
                             }
                         }
                         outline: none;
-                        &:focus {
+                        &:focus-visible {
                             outline: @variables_focus_style;
                         }
                     }
