--- a/customize.dist/src/less2/include/checkmark.less
+++ b/customize.dist/src/less2/include/checkmark.less
@@ -129,7 +129,7 @@
                 box-sizing: border-box;
             }
             outline: none;
-            &:focus {
+            &:focus-visible {
                 outline: @variables_focus_style;
             }
         }
@@ -217,7 +217,7 @@
                 height: var(--checkmark-dim1);
             }
             outline: none;
-            &:focus {
+            &:focus-visible {
                 outline: @variables_focus_style;
             }
         }
