--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -28,7 +28,7 @@
         }
         &.tui-full-calendar-content {
             font-size: @colortheme_app-font-size;
-            &:focus {
+            &:focus-visible {
                 outline: @variables_focus_style;
             }
         }
@@ -141,7 +141,7 @@
                 color: @cryptpad_text_col;
             }
             outline: none;
-            &:focus {
+            &:focus-visible {
                 outline: @variables_focus_style;
             }
         }
@@ -260,7 +260,7 @@
 
 
         outline: none;
-        &:focus {
+        &:focus-visible {
             outline: @variables_focus_style;
         }
         &::-moz-focus-inner {
