--- a/customize.dist/src/less2/include/infopages.less
+++ b/customize.dist/src/less2/include/infopages.less
@@ -236,7 +236,7 @@ body.html {
                 border: 0px;
                 border-radius: @infopages-radius;
                 padding: 0.5em 0.7em;
-                &:focus {
+                &:focus-visible {
                     outline: @variables_focus_style;
                 }
             }
