--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -23,7 +23,7 @@
     font: @colortheme_app-font;
 
     input, textarea, .cp-appblock {
-        &:focus {
+        &:focus-visible {
             outline: @variables_focus_style;
         }
     }
