--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -41,7 +41,7 @@
     #cp-sidebarlayout-container {
         #cp-sidebarlayout-rightside {
             input, button, span[tabindex="0"] {
-                &:focus{
+                &:focus-visible {
                     outline: @variables_focus_style;
                 }
             }
