--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -47,7 +47,7 @@
                     align-items: center;
                     .leftside-menu-category_main();
                     box-shadow: @cryptpad_ui_shadow;
-                    &:focus{
+                    &:focus-visible {
                         outline: @variables_focus_style;
                     }
                 }
