--- a/customize.dist/src/less2/include/tokenfield.less
+++ b/customize.dist/src/less2/include/tokenfield.less
@@ -81,7 +81,7 @@
                 padding-left: 4px;
                 vertical-align: middle;
                 outline: none;
-                &:focus {
+                &:focus-visible {
                     outline: @variables_focus_style;
                 }
             }
