--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -633,7 +633,7 @@
                             color: @cp_sidebar-left-active-fg;
                             border: 0px;
                         }
-                        &:focus {
+                        &:focus-visible {
                             outline: @variables_focus_style;
                         }
                         i {
