add margin to icons #1612

--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -65,6 +65,7 @@
         button {
             .fa-caret-down {
                 margin-right: 0.5em !important;
+                margin-left: 0.5em;
             }
             * {
                 .tools_unselectable();
