add margin to last card component #1604

--- a/customize.dist/src/less2/pages/page-features.less
+++ b/customize.dist/src/less2/pages/page-features.less
@@ -112,7 +112,11 @@
     .cp-regis-user {
         @media (max-width:575px) {
             margin-top: 3em;
-            margin-bottom: 3em;
+        }
+    }
+    .cp-premium-user {
+        @media (max-width:575px) {
+            margin-top: 3em;
         }
     }
 }
