--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -102,8 +102,8 @@
                 text-transform: uppercase;
                 display: inline-flex;
                 align-items: center;
-                .fa:not(:last-child) {
-                    margin-right: 5px;
+                i:not(:last-child) {
+                    margin-right: 0.5rem;
                 }
                 &:hover {
                     background-color: fade(@cp_toolbar-fg, 30%);
