--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -148,8 +148,8 @@
         background-color: @cp_buttons-cancel;
         box-sizing: border-box;
         align-items: center;
-        line-height: 20px;
-        padding: 8px 6px;
+        line-height: 36px;
+        padding: 0 6px;
         white-space: nowrap;
         text-align: center;
         text-transform: uppercase;
@@ -179,6 +179,10 @@
             line-height: initial;
             padding: 5px;
             height: auto !important;
+        }
+        &.btn-confirm {
+            line-height: 20px;
+            padding: 8px 6px;
         }
 
         &:hover, &:not(:disabled):not(.disabled):active, &:focus {
@@ -223,7 +227,6 @@
             background-color: @cp_buttons-primary;
             color: @cp_buttons-primary-text;
             border-color: @cp_buttons-primary-border;
-            padding: 0 6px;
             &:hover, &:not(:disabled):active, &:focus {
                 color: @cp_buttons-primary-text;
                 border-color: @cp_buttons-primary-border;
