Set state on Tiptap toolbar button

--- a/www/tiptap/app-tiptap.less
+++ b/www/tiptap/app-tiptap.less
@@ -21,6 +21,12 @@
     color: @cp_app-fg;
     background-color: @cp_app-bg;
 
+    #cp-tiptap-toolbar {
+        .cp-active {
+            background: #AAAAAAFF;
+        }
+    }
+
     #cp-app-tiptap-editor {
         display: flex;
         flex: 1;
@@ -36,6 +42,8 @@
                 }
             }
         }
+
+
 
     }
 }
