--- a/www/tiptap/app-tiptap.less
+++ b/www/tiptap/app-tiptap.less
@@ -35,9 +35,9 @@
                 height: 16px;
                 display: inline-block;
             }
-        .cp-active {
-            background: #AAAAAAFF;
-        }
+            &.cp-active {
+                background: #AAAAAAFF;
+            }
     }
 }
 
