Fix focus styling

--- a/www/tiptap/app-tiptap.less
+++ b/www/tiptap/app-tiptap.less
@@ -37,6 +37,7 @@
             }
             &.cp-active {
                 background: #AAAAAAFF;
+                outline: 5px auto -webkit-focus-ring-color;
             }
     }
 }
