--- a/www/tiptap/app-tiptap.less
+++ b/www/tiptap/app-tiptap.less
@@ -23,6 +23,7 @@
 
     #cp-tiptap-toolbar {
         button {
+            color: @cryptpad_text_col;
             background: transparent;
             border: none;
             padding: 4px 6px;
@@ -37,6 +38,7 @@
             }
             &.cp-active {
                 background: #AAAAAAFF;
+                color: black;
                 outline: 5px auto -webkit-focus-ring-color;
             }
     }
