Add more functionalities

--- a/www/tiptap/app-tiptap.less
+++ b/www/tiptap/app-tiptap.less
@@ -37,9 +37,9 @@
                 display: inline-block;
             }
             &.cp-active {
-                background: #AAAAAAFF;
+                background-color: #e6e6e6;
+                border-color: #e6e6e6;
                 color: black;
-                outline: 5px auto -webkit-focus-ring-color;
             }
     }
 }
@@ -59,9 +59,6 @@
                 }
             }
         }
-
-
-
     }
 
     #cp-app-tiptap-editor {
