Toggle calendar visibility on small screens

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -640,6 +640,7 @@
                 }
                 &.cp-ghost {
                     padding: 0;
+                    margin-top: 0.5rem;
                     button {
                         .tools_unselectable();
                         cursor: pointer;
