add padding for radio and checkbox buttons inside the choice/checkbox questions

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -980,6 +980,7 @@
         .cp-radio, .cp-checkmark {
             display: inline-flex;
             max-width: 100%;
+            padding: 5px 0;
         }
         .cp-checkmark-label {
             word-break: break-word;
