Don't always fail checkup if support is disabled

--- a/www/checkup/app-checkup.less
+++ b/www/checkup/app-checkup.less
@@ -37,6 +37,9 @@ html, body {
         &.failure {
             border: 1px solid red;
         }
+        &.info {
+            border: 1px solid green;
+        }
         &.error {
             border: 1px solid red;
         }
