--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -980,7 +980,7 @@
         .cp-radio, .cp-checkmark {
             display: inline-flex;
             max-width: 100%;
-            padding: 5px 0;
+            padding: 0.313rem 0;
         }
         .cp-checkmark-label {
             word-break: break-word;
@@ -1044,7 +1044,7 @@
         }
         .cp-form-sort-order {
             border: 1px solid @cryptpad_text_col;
-            padding: 0 5px;
+            padding: 0 0.313rem;
             margin-right: 5px;
         }
         &:hover {
