--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -165,17 +165,17 @@
                     outline-color: @cp_dropdown-fg;
                 }
                 .cp-avatar:hover {
-                    background-color: @cp_dropdown-bg-hover !important;
+                    background-color: @cp_dropdown-bg-hover;
                 }
                 .cp-notification-content:hover {
                     border-radius: @variables_radius;
-                    background-color: @cp_dropdown-bg-hover !important;
+                    background-color: @cp_dropdown-bg-hover;
                 }
             }
 
             li[role="menuitem"]:not(:has(.cp-avatar)) {
                 &:hover {
-                    background-color: @cp_dropdown-bg-hover !important;
+                    background-color: @cp_dropdown-bg-hover;
                 }
             }
 
