Changed styling of warning

--- a/customize.dist/src/less2/include/creation.less
+++ b/customize.dist/src/less2/include/creation.less
@@ -181,8 +181,11 @@
             }
 
             .cp-creation-password-warning {
-                background-color:@creation-bg-color-light;
+                margin-top: 0.4rem;
+                font-size: 12px !important;
+                line-height: normal !important
             }
+
             .cp-creation-help, .cp-creation-warning {
                 font-size: 16px;
                 color: @cp_creation-fg;
