Fix LESS nesting

--- a/customize.dist/src/less2/include/creation.less
+++ b/customize.dist/src/less2/include/creation.less
@@ -180,12 +180,6 @@
                 }
             }
 
-            .cp-creation-password-warning {
-                margin-top: 0.4rem;
-                font-size: 12px !important;
-                line-height: normal !important
-            }
-
             .cp-creation-help, .cp-creation-warning {
                 font-size: 16px;
                 color: @cp_creation-fg;
@@ -299,6 +293,11 @@
                             flex: none;
                         }
                     }
+                }
+                .cp-creation-password-warning {
+                    margin-top: 0.4rem;
+                    font-size: 0.75em;
+                    line-height: 100%;
                 }
             }
             .cp-creation-settings {
