--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -576,6 +576,9 @@
                 display: flex;
                 max-height: 100%;
             }
+            .kanban-boards-container{
+                display: flex;
+            }
         }
         #kanban-trash {
             height: 1px;
