fix hover style for notifications #1525 remove `:has` selector

--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -164,17 +164,19 @@
                 &:focus-visible {
                     outline-color: @cp_dropdown-fg;
                 }
+                &:hover {
+                    background-color: @cp_dropdown-bg-hover;
+                }
+            }
+            li[role="menuitem"].cp-notification-avatar {
+                &:hover {
+                    background-color: transparent;
+                }
                 .cp-avatar:hover {
                     background-color: @cp_dropdown-bg-hover;
                 }
                 .cp-notification-content:hover {
                     border-radius: @variables_radius;
-                    background-color: @cp_dropdown-bg-hover;
-                }
-            }
-
-            li[role="menuitem"]:not(:has(.cp-avatar)) {
-                &:hover {
                     background-color: @cp_dropdown-bg-hover;
                 }
             }
