Change padding to relative unit #1688

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -763,7 +763,7 @@
                 }
                 .cp-notifications-empty {
                     color: @cp_dropdown-fg;
-                    padding: 5px;
+                    padding: 0.3em;
                 }
             }
         }
