--- a/customize.dist/src/less2/include/checkmark.less
+++ b/customize.dist/src/less2/include/checkmark.less
@@ -137,7 +137,7 @@
     }
 
     .cp-radio {
-        margin: 0.2rem 0 0.2rem 0;
+        margin: 0;
         display: flex;
         align-items: center;
         position: relative;
