Add spacing to radio in forms settings

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -1319,6 +1319,9 @@
                     }
                 }
             }
+            .cp-radio {
+                margin: 0.2rem 0;
+            }
             .cp-form-status {
                 margin-bottom: 0.2rem;
             }
