Center avatar on small screens #1090

--- a/www/profile/app-profile.less
+++ b/www/profile/app-profile.less
@@ -80,6 +80,12 @@
             margin: 5px !important;
         }
     }
+
+    @media screen and (max-width: 550px) {
+        #cp-app-profile-avatar {
+            margin: auto;
+        }
+    }
     .cp-app-profile-resizer {
         text-align: center;
     }
