Added arrow buttons for moving question blocks and disabled drag on mobile

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -971,6 +971,16 @@
             i { margin-right: 5px; }
             background: fade(@cryptpad_text_col, 10%);
         }
+        .cp-form-block-arrows {
+
+            float: left;
+            padding: 5px;
+            margin-top: -35px;
+            margin-left: -10px;
+            border-radius: 0px @variables_radius 0px 0px;
+            .direction-arrow { margin: 5px; }
+            background: fade(@cryptpad_text_col, 10%);
+        }
     }
 
     .cp-form-type-radio, .cp-form-type-checkbox {
