--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -972,13 +972,14 @@
             background: fade(@cryptpad_text_col, 10%);
         }
         .cp-form-block-arrows {
-
-            float: left;
+            max-width: fit-content;
+            margin-inline: auto;
             padding: 5px;
             margin-top: -35px;
-            margin-left: -10px;
             border-radius: 0px @variables_radius 0px 0px;
-            .direction-arrow { margin: 5px; }
+            .direction-arrow-down {
+                margin-left: 20px; 
+            }
             background: fade(@cryptpad_text_col, 10%);
         }
     }
