Sidebar layout improvements

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -236,6 +236,12 @@
                         margin-bottom: 0;
                     }
                 }
+                .cp-sidebarlayout-description-item {
+                    display: block;
+                    color: @cp_sidebar-hint;
+                    margin-top: @sidebar_base-margin;
+                    margin-bottom: 0;
+                }
                 label.noTitle {
                     display: inline-flex;
                     .fa {
